--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,6 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "cinttypes": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
     }
 }
